# mongo-arrow

./: .git-blame-ignore-revs  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  arrow-165.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: bump-version.sh
.github/workflows/: benchmark.yml  dist-python.yml  release-python-osx.yml  release-python.yml  test-python.yml  tests.yml  zizmor.yml
bindings/python/: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  RELEASE.md  RELEASE.rst  THIRD-PARTY-NOTICES  addtags.py  asv.conf.json  benchmark.py  build-libbson.sh  build-manylinux-wheel-internal.sh  build-manylinux-wheel.sh  build-pyarrow.sh  cibw_before_build.sh  get_ld_path.sh  justfile  pyproject.toml  release-macos.sh  release.sh  repair_wheel.py  setup.cfg  setup.py  tox.ini
bindings/python/benchmarks/: __init__.py  benchmarks.py
bindings/python/conda/: environment.yml  meta.yaml
bindings/python/docs/: Makefile  conf.py  docs-requirements.txt  environment.yml  make.bat
bindings/python/docs/api/: index.rst  pandas_types.rst  types.rst
bindings/python/docs/source/: changelog.rst  comparison.rst  conf.py  data_types.rst  extension_types.rst  faq.rst  index.rst  installation.rst  quickstart.rst  schemas.rst  supported_types.rst
bindings/python/docs/source/api/: index.rst
bindings/python/docs/source/developer/: benchmarks.rst  index.rst  installation.rst
bindings/python/pymongoarrow/: __init__.py  api.py  async_api.py  bson.pyi  bson_util.pyx  builder.pyx  builders.pyi  context.py  errors.py  lib.pyx  libarrow.pxd  libbson.pxd  monkey.py  pandas_types.py  polars_types.py  result.py  schema.py  types.py  utils.pyi  version.py
bindings/python/pymongoarrow/libbson/: __init__.pxd  version.pyx
bindings/python/pymongoarrow/libbson/include/bson/: bson-version.h
bindings/python/requirements/: build.txt  test.txt
bindings/python/results/: benchmarks.json
bindings/python/results/M-C02G6608MD6M.attlocal.net/: 5bf829a8-virtualenv-py3.8-Cython-pandas-pyarrow7.0.0-pymongo3.11-BENCHMARK_SIZELARGE.json  5bf829a8-virtualenv-py3.8-Cython-pandas-pyarrow7.0.0-pymongo3.11-BENCHMARK_SIZESMALL.json  5bf829a8-virtualenv-py3.8-Cython-pandas-pyarrow7.0.0-pymongo4.1.1-BENCHMARK_SIZELARGE.json  5bf829a8-virtualenv-py3.8-Cython-pandas-pyarrow7.0.0-pymongo4.1.1-BENCHMARK_SIZESMALL.json  machine.json
bindings/python/results/M-M9V2J24RYG/: machine.json
bindings/python/src/pymongoarrow/: __init__.py  api.py
bindings/python/test/: __init__.py  conftest.py  nested_data_in.json  nested_data_out.json  test_arrow.py  test_async_api.py  test_bson.py  test_bson_util.py  test_builder.py  test_builders.py  test_datetime.py  test_libbson.py  test_monkey.py  test_numpy.py  test_pandas.py  test_parquet.py  test_polars.py  test_pymongoarrow.py  test_schema.py  utils.py
bindings/python/test/pandas_types/: test_binary.py  test_code.py  test_decimal128.py  test_int32_overflow.py  test_objectid.py  test_regex.py  util.py
