
[metadata]
name = pymongoarrow
version = attr: pymongoarrow.version.__version__
description = "Tools for using NumPy, Pandas and PyArrow with MongoDB"
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License, Version 2.0
author = Prashant Mital
maintainer = MongoDB, Inc.
url = https://github.com/mongodb-labs/mongo-arrow/tree/main/bindings/python
platforms = Linux, Mac OS X
keywords = mongo, mongodb, pymongo, arrow, bson, numpy, pandas
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    # keep versions in sync with pyproject.toml "requires"
    pyarrow >=8,<8.1
    pymongo >=3.11,<5

[options.package_data]
pymongoarrow = *.pxd, *.pyx, *.pyi, *.so.*, *.dylib, *.dll, *.pyd

[options.packages.find]
exclude =
    test
    docs

[options.extras_require]
test = pandas;pytz
